--- a/_output.yml
+++ b/_output.yml
@@ -5,7 +5,7 @@ bookdown::gitbook:
       before: |
         <li><a href="./">GAMA Manual</a></li>
       after: |
-        <li><a href="www.bhugole.com" target="blank">Published @ bhugole</a></li>
+        <li><a href="" target="blank">Published @ bhugole</a></li>
     #edit: https://github.com/sriramab/gamamanual/edit/master/%s
     download: ["pdf", "epub", "mobi"]
 bookdown::pdf_book:
