fixed cover and links

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -4,4 +4,5 @@ language:
     chapter_name: "Chapter "
 output_dir: docs
 delete_merged_file: true
-rmd_files: ["index.Rmd", "WikiOnly/NewVersionChanges.md","WikiOnly/OperatorsAA.md", "WikiOnly/OperatorsAA.md", "WikiOnly/OperatorsBC.md","WikiOnly/OperatorsDH.md","WikiOnly/OperatorsIM.md","WikiOnly/OperatorsNR.md","WikiOnly/OperatorsSZ.md"]
+#rmd_files: ["index.Rmd", "NewVersionChanges.md","OperatorsAA.md", "OperatorsAA.md", "OperatorsBC.md","OperatorsDH.md","OperatorsIM.md","OperatorsNR.md","OperatorsSZ.md"]
+rmd_files: ["index.Rmd", "links/NewVersionChanges.md","links/OperatorsAA.md", "links/OperatorsAA.md", "links/OperatorsBC.md","links/OperatorsDH.md","links/OperatorsIM.md","links/OperatorsNR.md","links/OperatorsSZ.md"]
